metadata/force-app/main/default/objects/Community_Member__c/Community_Member__c.object-meta.xml
<CustomObject>
    <description>A Community Member represents an individual user registered on the community. A Community Member will be created in Salesforce if a Contact can be matched by its email to an inSided community user.</description>
    <label>Community Member</label>
    <nameField>
        <label>Community Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>