metadata/force-app/main/default/objects/Community_Member__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Community Members are matched to an Account based on the Contact lookup.</description>
    <inlineHelpText>Community Members are matched to an Account based on the Contact lookup.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Community Members</relationshipLabel>
    <relationshipName>Community_Members_Account</relationshipName>
    <type>Lookup</type>
</CustomField>