metadata/force-app/main/default/objects/Community_Member__c/fields/Article_replies__c.field-meta.xml
<CustomField>
    <fullName>Article_replies__c</fullName>
    <description>The total number of replies this user has added to articles.</description>
    <inlineHelpText>The total number of replies this user has added to articles.</inlineHelpText>
    <label>Article replies</label>
    <summaryFilterItems>
        <field>Community_Member_Activity__c.Name</field>
        <operation>equals</operation>
        <value>Article replied</value>
    </summaryFilterItems>
    <summaryForeignKey>Community_Member_Activity__c.Community_Member__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>