metadata/force-app/main/default/objects/Community_Member__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Community Members are matched to a Contact based on email address.</description>
    <inlineHelpText>Community Members are matched to a Contact based on email address.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Community Members</relationshipLabel>
    <relationshipName>Community_Members_Contact</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>