metadata/force-app/main/default/objects/Community_Member__c/fields/Conversation_replies__c.field-meta.xml
<CustomField>
    <fullName>Conversation_replies__c</fullName>
    <description>The total number of replies this user has added to conversations.</description>
    <inlineHelpText>The total number of replies this user has added to conversations.</inlineHelpText>
    <label>Conversation replies</label>
    <summaryFilterItems>
        <field>Community_Member_Activity__c.Name</field>
        <operation>equals</operation>
        <value>Conversation replied</value>
    </summaryFilterItems>
    <summaryForeignKey>Community_Member_Activity__c.Community_Member__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>