metadata/force-app/main/default/objects/Community_Member__c/fields/Conversations_started__c.field-meta.xml
<CustomField>
    <fullName>Conversations_started__c</fullName>
    <description>The total number of conversations started by this user.</description>
    <inlineHelpText>The total number of conversations started by this user.</inlineHelpText>
    <label>Conversations started</label>
    <summaryFilterItems>
        <field>Community_Member_Activity__c.Name</field>
        <operation>equals</operation>
        <value>Conversation started</value>
    </summaryFilterItems>
    <summaryForeignKey>Community_Member_Activity__c.Community_Member__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>