metadata/force-app/main/default/objects/Community_Member__c/fields/Ideas_submitted__c.field-meta.xml
<CustomField>
    <fullName>Ideas_submitted__c</fullName>
    <description>The total number of ideas submitted by this user.</description>
    <inlineHelpText>The total number of ideas submitted by this user.</inlineHelpText>
    <label>Ideas submitted</label>
    <summaryFilterItems>
        <field>Community_Member_Activity__c.Name</field>
        <operation>equals</operation>
        <value>Idea submitted</value>
    </summaryFilterItems>
    <summaryForeignKey>Community_Member_Activity__c.Community_Member__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>