metadata/force-app/main/default/objects/Community_Member__c/fields/Ideas_voted__c.field-meta.xml
<CustomField>
    <fullName>Ideas_voted__c</fullName>
    <description>The total number of ideas voted that this user has voted on.</description>
    <inlineHelpText>The total number of ideas voted that this user has voted on.</inlineHelpText>
    <label>Ideas voted</label>
    <summaryFilterItems>
        <field>Community_Member_Activity__c.Name</field>
        <operation>equals</operation>
        <value>Idea voted</value>
    </summaryFilterItems>
    <summaryForeignKey>Community_Member_Activity__c.Community_Member__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>