metadata/force-app/main/default/objects/Community_Member__c/fields/Last_ideation_interaction_date__c.field-meta.xml
<CustomField>
    <fullName>Last_ideation_interaction_date__c</fullName>
    <description>The last time this user submitted or voted for an idea on the community.</description>
    <inlineHelpText>The last time this user submitted or voted for an idea on the community.</inlineHelpText>
    <label>Last ideation interaction date</label>
    <summarizedField>Community_Member_Activity__c.Activity_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Community_Member_Activity__c.Name</field>
        <operation>contains</operation>
        <value>Idea</value>
    </summaryFilterItems>
    <summaryForeignKey>Community_Member_Activity__c.Community_Member__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>