metadata/force-app/main/default/objects/Community_Member__c/fields/Last_post_date__c.field-meta.xml
<CustomField>
    <fullName>Last_post_date__c</fullName>
    <description>The last time this user posted on the community.</description>
    <inlineHelpText>The last time this user posted on the community.</inlineHelpText>
    <label>Last post date</label>
    <summarizedField>Community_Member_Activity__c.Activity_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Community_Member_Activity__c.Name</field>
        <operation>notEqual</operation>
        <value>Community visited</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Community_Member_Activity__c.Name</field>
        <operation>notContain</operation>
        <value>liked</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Community_Member_Activity__c.Name</field>
        <operation>notContain</operation>
        <value>voted</value>
    </summaryFilterItems>
    <summaryForeignKey>Community_Member_Activity__c.Community_Member__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>