metadata/force-app/main/default/objects/Community_Member__c/fields/of_Comm_Member_Activities__c.field-meta.xml
<CustomField>
    <fullName>of_Comm_Member_Activities__c</fullName>
    <description>BODEV-1636: Roll-up summary to filter out Community Member without Activities in reports.</description>
    <label># of Comm. Member Activities</label>
    <summaryForeignKey>Community_Member_Activity__c.Community_Member__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>