metadata/force-app/main/default/objects/Community_Member__c/fields/Power_of_1_Community_Member__c.field-meta.xml
<CustomField>
    <fullName>Power_of_1_Community_Member__c</fullName>
    <description>BODEV-1636: Power of 1 field to enhance Community Member reporting.</description>
    <formula>1</formula>
    <label>Power of 1 - Community Member</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>