metadata/force-app/main/default/objects/Community_Member__c/fields/Question_replies__c.field-meta.xml
<CustomField>
    <fullName>Question_replies__c</fullName>
    <description>The total number of replies this user has added to questions.</description>
    <inlineHelpText>The total number of replies this user has added to questions.</inlineHelpText>
    <label>Question replies</label>
    <summaryFilterItems>
        <field>Community_Member_Activity__c.Name</field>
        <operation>equals</operation>
        <value>Question replied</value>
    </summaryFilterItems>
    <summaryForeignKey>Community_Member_Activity__c.Community_Member__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>