metadata/force-app/main/default/objects/Community_Member__c/fields/Questions_asked__c.field-meta.xml
<CustomField>
    <fullName>Questions_asked__c</fullName>
    <description>The total number of questions asked by this user.</description>
    <inlineHelpText>The total number of questions asked by this user.</inlineHelpText>
    <label>Questions asked</label>
    <summaryFilterItems>
        <field>Community_Member_Activity__c.Name</field>
        <operation>equals</operation>
        <value>Question asked</value>
    </summaryFilterItems>
    <summaryForeignKey>Community_Member_Activity__c.Community_Member__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>