metadata/force-app/main/default/objects/Community_Member__c/fields/Registration_date__c.field-meta.xml
<CustomField>
    <fullName>Registration_date__c</fullName>
    <description>The date this user registered their community account</description>
    <inlineHelpText>The date this user registered their community account</inlineHelpText>
    <label>Registration date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>