metadata/force-app/main/default/objects/Community_Member__c/fields/Total_posts__c.field-meta.xml
<CustomField>
    <fullName>Total_posts__c</fullName>
    <description>The total number of posts this user has made on the community.</description>
    <formula>((Conversations_started__c + Ideas_submitted__c)- Ideas_submitted__c) + Article_replies__c + Questions_asked__c + Conversation_replies__c + Question_replies__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total number of posts this user has made on the community.</inlineHelpText>
    <label>Total posts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>