metadata/force-app/main/default/objects/Community_Member__c/fields/Total_visits__c.field-meta.xml
<CustomField>
    <fullName>Total_visits__c</fullName>
    <description>The total number of visits this user has made to the community.</description>
    <inlineHelpText>The total number of visits this user has made to the community.</inlineHelpText>
    <label>Total visits</label>
    <summaryFilterItems>
        <field>Community_Member_Activity__c.Name</field>
        <operation>equals</operation>
        <value>Community visited</value>
    </summaryFilterItems>
    <summaryForeignKey>Community_Member_Activity__c.Community_Member__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>