metadata/force-app/main/default/objects/Community_Member__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <description>The User ID is the unique identifier for an inSided User account.</description>
    <externalId>true</externalId>
    <inlineHelpText>The User ID is the unique identifier for an inSided User account.</inlineHelpText>
    <label>UserId</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>