metadata/force-app/main/default/objects/Community_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Total_posts__c</columns>
    <columns>Questions_asked__c</columns>
    <columns>Question_replies__c</columns>
    <columns>Conversations_started__c</columns>
    <columns>Conversation_replies__c</columns>
    <columns>Article_replies__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>